force-app/main/default/objects/Account/fields/Total_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Percentage__c</fullName>
    <label>Total Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>