force-app/main/default/objects/Account/fields/Type_of_CHSP_Provider__c.field-meta.xml
<CustomField>
    <fullName>Type_of_CHSP_Provider__c</fullName>
    <inlineHelpText>Please select at least one option.</inlineHelpText>
    <label>Type of CHSP Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grants Based</fullName>
            </value>
            <value>
                <fullName>Procurement Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>