force-app/main/default/objects/Account/fields/Validated_ABN__c.field-meta.xml
<CustomField>
    <fullName>Validated_ABN__c</fullName>
    <description>Response from ABR interface</description>
    <label>ABR Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Validated with ABR</label>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>ABN Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>