force-app/main/default/objects/Account/fields/Value_Of_RAD_Balances__c.field-meta.xml
<CustomField>
    <fullName>Value_Of_RAD_Balances__c</fullName>
    <label>Value Of RAD Balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>