force-app/main/default/objects/Account/recordTypes/Administrative_Organisation.recordType-meta.xml
<RecordType>
    <fullName>Administrative_Organisation</fullName>
    <active>true</active>
    <description>Administrative Organisation</description>
    <label>Administrative Organisation</label>
</RecordType>