force-app/main/default/objects/Account/recordTypes/Aged_Care_Organisation.recordType-meta.xml
<RecordType>
    <fullName>Aged_Care_Organisation</fullName>
    <active>true</active>
    <description>Aged Care Organisation</description>
    <label>Aged Care Organisation</label>
</RecordType>