force-app/main/default/objects/Account/recordTypes/Approved_Provider.recordType-meta.xml
<RecordType>
    <fullName>Approved_Provider</fullName>
    <active>true</active>
    <description>Approved Provider</description>
    <label>Approved Provider</label>
</RecordType>