force-app/main/default/objects/Account/recordTypes/Benchmarking_Organisation.recordType-meta.xml
<RecordType>
    <fullName>Benchmarking_Organisation</fullName>
    <active>true</active>
    <description>Benchmarking Organisation</description>
    <label>Benchmarking Organisation</label>
</RecordType>