force-app/main/default/objects/Account/recordTypes/Commonwealth_Home_Support_Programme.recordType-meta.xml
<RecordType>
    <fullName>Commonwealth_Home_Support_Programme</fullName>
    <active>true</active>
    <description>Commonwealth Home Support Programme</description>
    <label>Commonwealth Home Support Programme</label>
</RecordType>