force-app/main/default/objects/Account/recordTypes/Management_Company.recordType-meta.xml
<RecordType>
    <fullName>Management_Company</fullName>
    <active>true</active>
    <description>Management Company</description>
    <label>Management Company</label>
</RecordType>