force-app/main/default/objects/Account/recordTypes/National_Aboriginal_and_Torres_Strait_Islander_Flexible_Aged_Care.recordType-meta.xml
<RecordType>
    <fullName>National_Aboriginal_and_Torres_Strait_Islander_Flexible_Aged_Care</fullName>
    <active>true</active>
    <description>National Aboriginal and Torres Strait Islander Flexible Aged Care Program</description>
    <label>National Aboriginal and Torres Strait Islander Flexible Aged Care Program</label>
</RecordType>