force-app/main/default/objects/Account/recordTypes/Service_Delivery_Organisation.recordType-meta.xml
<RecordType>
    <fullName>Service_Delivery_Organisation</fullName>
    <active>true</active>
    <description>Service Delivery Organisation</description>
    <label>Service Delivery Organisation</label>
</RecordType>