force-app/main/default/objects/Account/validationRules/Perm_ACO_SDO_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_ACO_SDO_Access</fullName>
    <active>true</active>
    <description>Aged Care Organisation and Service Delivery Organisation record access</description>
    <errorConditionFormula>AND(
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
OR(
RecordType.DeveloperName = &apos;Aged_Care_Organisation&apos;,
RecordType.DeveloperName = &apos;Service_Delivery_Organisation&apos;),
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_CHSP,
$Permission.GPMS_NATSIFAC,
$Permission.GPMS_ACQSC_User,
$Permission.System_Administrator,
$Permission.Star_Rating_Admin
)),
NOT(
AND(
RecordType.DeveloperName = &apos;Aged_Care_Organisation&apos;,
OR($Profile.Name = &apos;Provider User&apos;,
$Profile.Name = &apos;Org Admin&apos;),
GPMS_ProspectivePortalACO__c == true
))))</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>