force-app/main/default/objects/Account/validationRules/Perm_AO_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_AO_Access</fullName>
    <active>true</active>
    <description>Administrative Organisation record access</description>
    <errorConditionFormula>AND(
(ISCHANGED(Allow_Updates__c)),
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
RecordType.DeveloperName = &apos;Administrative_Organisation&apos;,
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_NATSIFAC,
$Permission.GPMS_ACQSC_User,
$Permission.System_Administrator,
$Permission.Star_Rating_Admin
))))</errorConditionFormula>
    <errorMessage>You do not have access to edit this Administrative Organisation record</errorMessage>
</ValidationRule>