force-app/main/default/objects/Account/validationRules/Perm_AP_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_AP_Access</fullName>
    <active>true</active>
    <description>Approved Provider record access</description>
    <errorConditionFormula>AND(
(ISCHANGED(Allow_Updates__c)),
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
RecordType.DeveloperName = &apos;Approved_Provider&apos;,
NOT(ISCHANGED(Administrator_Liquidator_Record_Exists__c)),
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_ACQSC_User,
$Permission.System_Administrator,
$Permission.Star_Rating_Admin
))))</errorConditionFormula>
    <errorMessage>You do not have access to edit this Approved Provider record</errorMessage>
</ValidationRule>