force-app/main/default/objects/Account/validationRules/Perm_NATSIFAC_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_NATSIFAC_Access</fullName>
    <active>true</active>
    <description>NATSIFAC record access</description>
    <errorConditionFormula>AND( 
(ISCHANGED(Allow_Updates__c)),
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
RecordType.DeveloperName = &apos;National_Aboriginal_and_Torres_Strait_Islander_Flexible_Aged_Care&apos;,
NOT(ISCHANGED(Administrator_Liquidator_Record_Exists__c)),
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_NATSIFAC,
$Permission.System_Administrator,
$Permission.Star_Rating_Admin
))))</errorConditionFormula>
    <errorMessage>You do not have access to edit this NATSIFAC record</errorMessage>
</ValidationRule>