force-app/main/default/objects/Account/validationRules/Valid_Incorporation_Status_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Incorporation_Status_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Incorporation_Status_Date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Incorporation_Status_Date__c</errorDisplayField>
    <errorMessage>Must be on or before current date</errorMessage>
</ValidationRule>