force-app/main/default/objects/Account/validationRules/Valid_Physical_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Physical_Address</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISBLANK(BillingStreet),ISBLANK(BillingCountry),ISBLANK(BillingCity),ISBLANK(BillingState),ISBLANK(BillingPostalCode),LEN(BillingPostalCode)&lt;&gt;4,!ISNUMBER(BillingPostalCode)))</errorConditionFormula>
    <errorMessage>Physical/Registered Business Address is mandatory and Postcode must be 4 digits number.</errorMessage>
</ValidationRule>