force-app/main/default/objects/Account/validationRules/Valid_Provider.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Provider</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Provider__c),OR(RecordType.DeveloperName=&apos;Administrative_Organisation&apos;,RecordType.DeveloperName=&apos;Management_Company&apos;,RecordType.DeveloperName=&apos;Service_Delivery_Organisation&apos;),ISPICKVAL(Is_Approved_Provider__c , &apos;Yes&apos;))</errorConditionFormula>
    <errorDisplayField>Provider__c</errorDisplayField>
    <errorMessage>Provider is mandatory</errorMessage>
</ValidationRule>