force-app/main/default/objects/Account/validationRules/Validate_AP_IncorporationIDType.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_AP_IncorporationIDType</fullName>
    <active>true</active>
    <description>The Approved Provider Incorporation ID Type must be Incorporated</description>
    <errorConditionFormula>AND(
NOT($Setup.BypassTriggers__c.BypassValidationRules__c),ISPICKVAL(Incorporation_ID_Type__c, &apos;Not Incorporated&apos;),
RecordType.DeveloperName=&apos;Approved_Provider&apos;)</errorConditionFormula>
    <errorDisplayField>Incorporation_ID_Type__c</errorDisplayField>
    <errorMessage>The Approved Provider Incorporation ID Type must be Incorporated</errorMessage>
</ValidationRule>