force-app/main/default/objects/Account/listViews/Approved_Provider.listView-meta.xml
<ListView>
    <fullName>Approved_Provider</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Integration_ID__c</columns>
    <columns>Incorporation_Status__c</columns>
    <columns>Provider_Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Approved_Provider</value>
    </filters>
    <label>02 Approved Provider</label>
</ListView>