force-app/main/default/objects/Account/listViews/X03_Management_Company.listView-meta.xml
<ListView>
    <fullName>X03_Management_Company</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Integration_ID__c</columns>
    <columns>Incorporation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Management_Company</value>
    </filters>
    <label>03 Management Company</label>
</ListView>