force-app/main/default/objects/Account/listViews/X04_Service_Delivery_Organisation.listView-meta.xml
<ListView>
    <fullName>X04_Service_Delivery_Organisation</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Integration_ID__c</columns>
    <columns>Incorporation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Service_Delivery_Organisation</value>
    </filters>
    <label>04 Service Delivery Organisation</label>
</ListView>