force-app/main/default/objects/Account/listViews/X05_Administrative_Organisation.listView-meta.xml
<ListView>
    <fullName>X05_Administrative_Organisation</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Integration_ID__c</columns>
    <columns>Incorporation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Administrative_Organisation</value>
    </filters>
    <label>05 Administrative Organisation</label>
</ListView>