force-app/main/default/objects/Account/listViews/X06_NATSIFAC.listView-meta.xml
<ListView>
    <fullName>X06_NATSIFAC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Integration_ID__c</columns>
    <columns>Incorporation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.National_Aboriginal_and_Torres_Strait_Islander_Flexible_Aged_Care</value>
    </filters>
    <label>06 NATSIFAC</label>
</ListView>