force-app/main/default/objects/Account/listViews/X07_CHSP.listView-meta.xml
<ListView>
    <fullName>X07_CHSP</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Integration_ID__c</columns>
    <columns>Incorporation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Commonwealth_Home_Support_Programme</value>
    </filters>
    <label>07 CHSP</label>
</ListView>