force-app/main/default/objects/Account/listViews/X08_Benchmarking_Organisations.listView-meta.xml
<ListView>
    <fullName>X08_Benchmarking_Organisations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Benchmarking_Organisation</value>
    </filters>
    <label>08 Benchmarking Organisations</label>
</ListView>